force-app/main/default/objects/Campaign/fields/EV_Plantilla_Encuesta_Email_ES__c.field-meta.xml
<CustomField>
    <fullName>EV_Plantilla_Encuesta_Email_ES__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Encuesta Email ES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>