force-app/main/default/objects/Campaign/fields/EV_Plantilla_Registro_Email_CAT_Link__c.field-meta.xml
<CustomField>
    <fullName>EV_Plantilla_Registro_Email_CAT_Link__c</fullName>
    <formula>IF(ISBLANK(EV_API_Plantilla_Registro_Email_CAT__c), &apos;&apos;, HYPERLINK(&apos;/&apos; &amp; EV_API_Plantilla_Registro_Email_CAT__c, EV_Plantilla_Registro_Email_CAT__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plantilla Registro Email CAT</label>
    <type>Text</type>
</CustomField>