force-app/main/default/objects/Campaign/fields/EV_Plantilla_Registro_Email_ES__c.field-meta.xml
<CustomField>
    <fullName>EV_Plantilla_Registro_Email_ES__c</fullName>
    <description>DeveloperName de la plantilla de registro que se deberá enviar.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Registro Email ES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>