force-app/main/default/objects/Campaign/fields/EV_PosibilidadPersonaJuridica__c.field-meta.xml
<CustomField>
    <fullName>EV_PosibilidadPersonaJuridica__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para determinar si en el evento se permiten personas jurídicas. También da paso al formulario de inscipción de persona jurídica.</description>
    <inlineHelpText>Marcar este campo si al evento asistirán personas jurídicas.</inlineHelpText>
    <label>Posibilidad Persona Jurídica</label>
    <type>Checkbox</type>
</CustomField>