force-app/main/default/objects/Campaign/fields/EV_Posicionamiento__c.field-meta.xml
<CustomField>
    <fullName>EV_Posicionamiento__c</fullName>
    <inlineHelpText>Posicionamiento del evento en el Portal</inlineHelpText>
    <label>Posicionamiento del evento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Destacado home</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Próximos eventos home</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Vídeos más recomendados home</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Últimos eventos subidos home</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Calendario cuadricula</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Calendario lista</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Calendario ficha</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Landing Ficha evento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>