force-app/main/default/objects/Campaign/fields/EV_ProgramaDeEventos__c.field-meta.xml
<CustomField>
    <fullName>EV_ProgramaDeEventos__c</fullName>
    <description>Tipo de programa del evento</description>
    <inlineHelpText>Indicar programa al que pertenece el presente evento. A partir de este campo se configuran algunos elementos, como creatividades, etc.</inlineHelpText>
    <label>Programa de eventos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>002</fullName>
                <label>CaixaBank Talks</label>
            </value>
            <value>
                <fullName>001</fullName>
                <label>CaixaBank Talks LIVE</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Coordenadas</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Coordenadas Wealth</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Directrices</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Evento interno</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Ferias AgroBank</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Otros</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Accionistas Webinar Aula</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>Accionistas Curso Aula</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>Accionistas Encuentro corporativo</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>Accionistas Eventos culturales</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>Evento comunicaciones personalizadas</label>
            </value>
            <value>
                <fullName>014</fullName>
                <label>Virtual fuera de Portal</label>
            </value>
            <value>
                <fullName>015</fullName>
                <label>Evento senior</label>
            </value>
            <value>
                <fullName>014.</fullName>
                <isActive>false</isActive>
                <label>014.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>