force-app/main/default/objects/Campaign/fields/EV_PromotorDelEvento__c.field-meta.xml
<CustomField>
    <fullName>EV_PromotorDelEvento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Persona que solicita el evento</description>
    <label>Promotor del evento</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Eventos</relationshipLabel>
    <relationshipName>Eventos</relationshipName>
    <type>Lookup</type>
</CustomField>