force-app/main/default/objects/Campaign/fields/EV_Provincia__c.field-meta.xml
<CustomField>
    <fullName>EV_Provincia__c</fullName>
    <label>Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Provincia</valueSetName>
    </valueSet>
</CustomField>