force-app/main/default/objects/Campaign/fields/EV_RecursosNecesarios__c.field-meta.xml
<CustomField>
    <fullName>EV_RecursosNecesarios__c</fullName>
    <description>Recursos necesarios para llevar a cabo la realización del evento</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Informar recursos necesarios.</inlineHelpText>
    <label>Recursos necesarios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>