force-app/main/default/objects/Campaign/fields/EV_SolicitanteEvento__c.field-meta.xml
<CustomField>
    <fullName>EV_SolicitanteEvento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Centro que solicita el evento</description>
    <label>Centro del solicitante</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (Solicitante evento)</relationshipLabel>
    <relationshipName>Eventos_solicitados</relationshipName>
    <type>Lookup</type>
</CustomField>