force-app/main/default/objects/Campaign/fields/EV_Street__c.field-meta.xml
<CustomField>
    <fullName>EV_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dirección Calle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>