force-app/main/default/objects/Campaign/fields/EV_TechSummit__c.field-meta.xml
<CustomField>
    <fullName>EV_TechSummit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check para identificar los eventos de portales Tech Summit.</description>
    <label>Tech Summit</label>
    <type>Checkbox</type>
</CustomField>