force-app/main/default/objects/Campaign/fields/EV_TipoEvento__c.field-meta.xml
<CustomField>
    <fullName>EV_TipoEvento__c</fullName>
    <inlineHelpText>En caso de ser tipo Hibrido rellenar datos evento físico y virtual</inlineHelpText>
    <label>Tipo de Evento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Físico</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Virtual</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Híbrido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>