force-app/main/default/objects/Campaign/fields/EV_Total_MiembrosC__c.field-meta.xml
<CustomField>
    <fullName>EV_Total_MiembrosC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo que contea el numero total de miembros de campaña de EV_CampaignMemberC__c sin filtros</description>
    <label>Total Miembros Evento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>