force-app/main/default/objects/Campaign/fields/EV_TotalInscritos__c.field-meta.xml
<CustomField>
    <fullName>EV_TotalInscritos__c</fullName>
    <description>Miembros de campaña QR enviados + Registros confirmados + Asistencia Confirmada</description>
    <inlineHelpText>Personas que se han inscrito al evento.</inlineHelpText>
    <label>Total inscritos</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>QR enviado, Registro confirmado, Asistió</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>