force-app/main/default/objects/Campaign/fields/EV_TotalInscritosC__c.field-meta.xml
<CustomField>
    <fullName>EV_TotalInscritosC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo para contar el numero de EV_CampaingMemberC__c en estado QR enviado, Registro confirmado y Asistió</description>
    <label>Total Inscritos Evento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>