force-app/main/default/objects/Campaign/fields/EV_TotalMiembros__c.field-meta.xml
<CustomField>
    <fullName>EV_TotalMiembros__c</fullName>
    <description>Total miembros del evento</description>
    <inlineHelpText>Miembros que tienen alguna incidencia tras inscripción. Revisar registros.</inlineHelpText>
    <label>Total registros confirmados</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>Registro confirmado</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>