force-app/main/default/objects/Campaign/fields/EV_TotalRegistrosConfirmadosC__c.field-meta.xml
<CustomField>
    <fullName>EV_TotalRegistrosConfirmadosC__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo que contabiliza el total de registros confirmados en un evento.</description>
    <inlineHelpText>Miembros que tienen alguna incidencia tras inscripción. Revisar registros.</inlineHelpText>
    <label>Total registros confirmados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>