force-app/main/default/objects/Campaign/fields/EV_UrlAccesoAnonimo__c.field-meta.xml
<CustomField>
    <fullName>EV_UrlAccesoAnonimo__c</fullName>
    <formula>IF( RecordType.DeveloperName == &apos;EV_Eventos_Accionistas&apos;,  $CustomMetadata.EV_URL_portal__mdt.URLs.urlStreamingAccionistaPortal__c , $CustomMetadata.EV_URL_portal__mdt.URLs.urlStreamingPortal__c ) &amp; IF( RecordType.DeveloperName == &apos;EV_Eventos_Accionistas&apos;, $CustomMetadata.EV_URL_portal__mdt.URLs.URL_param_index__c, $CustomMetadata.EV_URL_portal__mdt.URLs.URL_param_Streaming__c) &amp; &apos;es&apos; &amp; $CustomMetadata.EV_URL_portal__mdt.URLs.URL_param_html__c &amp;&apos;?idEvento=&apos; &amp; EV_ExternalID__c &amp; $CustomMetadata.EV_URL_portal__mdt.URLs.URL_param_Anonimo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL acceso anonimo</label>
    <type>Text</type>
</CustomField>