force-app/main/default/objects/Campaign/fields/EV_URLChatVirtual__c.field-meta.xml
<CustomField>
    <fullName>EV_URLChatVirtual__c</fullName>
    <description>Enlace para recoger el chat de la plataforma de streaming</description>
    <encryptionScheme>None</encryptionScheme>
    <label>URL chat virtual</label>
    <type>Url</type>
</CustomField>