force-app/main/default/objects/Campaign/fields/EV_URLEventoVirtualExterno__c.field-meta.xml
<CustomField>
    <fullName>EV_URLEventoVirtualExterno__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>URL Evento Virtual Externo</label>
    <type>TextArea</type>
</CustomField>