force-app/main/default/objects/Campaign/fields/EV_URLImagenVideo__c.field-meta.xml
<CustomField>
    <fullName>EV_URLImagenVideo__c</fullName>
    <description>URL de la imágen que se mostrará en las templates en lugar del vídeo</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URL del video de la invitación</inlineHelpText>
    <label>URL Imagen Vídeo</label>
    <type>Url</type>
</CustomField>