force-app/main/default/objects/Campaign/fields/EV_URLRegistro__c.field-meta.xml
<CustomField>
    <fullName>EV_URLRegistro__c</fullName>
    <formula>IF( RecordType.DeveloperName == &apos;EV_Eventos_Accionistas&apos;,  $CustomMetadata.EV_URL_portal__mdt.URLs.urlAccionistaPortal__c , $CustomMetadata.EV_URL_portal__mdt.URLs.urlPortal__c )  &amp; IF( RecordType.DeveloperName == &apos;EV_Eventos_Accionistas&apos;, $CustomMetadata.EV_URL_portal__mdt.URLs.URL_param_index__c, $CustomMetadata.EV_URL_portal__mdt.URLs.URL_param_Inscripcion__c)  &amp; &apos;es&apos; &amp; $CustomMetadata.EV_URL_portal__mdt.URLs.URL_param_html__c&amp;&apos;?idEvento=&apos; &amp; EV_ExternalID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL de registro</label>
    <type>Text</type>
</CustomField>