force-app/main/default/objects/Campaign/fields/EV_URLSustituto__c.field-meta.xml
<CustomField>
    <fullName>EV_URLSustituto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>URL del botón acceder al evento en las comunicaiones de incidencias.</inlineHelpText>
    <label>URL &quot;Ver evento&quot;</label>
    <type>Url</type>
</CustomField>