force-app/main/default/objects/Campaign/fields/EV_VolumenPublicoObjetivo__c.field-meta.xml
<CustomField>
    <fullName>EV_VolumenPublicoObjetivo__c</fullName>
    <description>Campo que debe rellenar adobe campaign para establecer el número de volumen propuesto para el evento en función de las variables de selección</description>
    <label>Volumen público objetivo</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>