force-app/main/default/objects/Campaign/fields/purecloud__PureCloud_Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>purecloud__PureCloud_Campaign_Status__c</fullName>
    <formula>IF(ISBLANK(purecloud__PureCloud_Campaign_Setting__c), &quot;&quot;, IF(purecloud__Adjusted_End_Date_Time__c &lt; Now(), &quot;Not Running&quot;, IF(purecloud__Adjusted_Start_Date_Time__c &gt; Now(), &quot;Scheduled&quot;, &quot;Running&quot;)))</formula>
    <label>Genesys Cloud Campaign Status</label>
    <type>Text</type>
</CustomField>