force-app/main/default/objects/Campaign/fields/purecloud__Reconciled_Contact_Results__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Reconciled_Contact_Results__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reconciled Contact Results</label>
    <type>Checkbox</type>
</CustomField>