force-app/main/default/objects/Campaign/recordTypes/EV_CatalogoEventoFisico.recordType-meta.xml
<RecordType>
    <fullName>EV_CatalogoEventoFisico</fullName>
    <active>true</active>
    <label>Catálogo Evento Físico</label>
</RecordType>