force-app/main/default/objects/Campaign/recordTypes/EV_CatalogoEventoHibrido.recordType-meta.xml
<RecordType>
    <fullName>EV_CatalogoEventoHibrido</fullName>
    <active>true</active>
    <label>Catálogo Evento Híbrido</label>
</RecordType>