force-app/main/default/objects/Campaign/recordTypes/EV_CatalogoEventoVirtual.recordType-meta.xml
<RecordType>
    <fullName>EV_CatalogoEventoVirtual</fullName>
    <active>true</active>
    <label>Catálogo Evento virtual</label>
</RecordType>