force-app/main/default/objects/Campaign/recordTypes/EV_EventoFisico.recordType-meta.xml
<RecordType>
    <fullName>EV_EventoFisico</fullName>
    <active>true</active>
    <label>Evento físico</label>
</RecordType>