force-app/main/default/objects/Campaign/recordTypes/EV_EventoHibrido.recordType-meta.xml
<RecordType>
    <fullName>EV_EventoHibrido</fullName>
    <active>true</active>
    <label>Evento Híbrido</label>
</RecordType>