force-app/main/default/objects/Campaign/recordTypes/EV_Eventos_Accionistas.recordType-meta.xml
<RecordType>
    <fullName>EV_Eventos_Accionistas</fullName>
    <active>true</active>
    <label>Eventos Accionistas</label>
</RecordType>