force-app/main/default/objects/Campaign/recordTypes/EV_EventoTechSummit.recordType-meta.xml
<RecordType>
    <fullName>EV_EventoTechSummit</fullName>
    <active>true</active>
    <label>Evento Tech Summit</label>
</RecordType>