force-app/main/default/objects/Campaign/recordTypes/EV_EventoVirtual.recordType-meta.xml
<RecordType>
    <fullName>EV_EventoVirtual</fullName>
    <active>true</active>
    <label>Evento virtual</label>
</RecordType>