force-app/main/default/objects/Campaign/recordTypes/EV_TechSummitFisico.recordType-meta.xml
<RecordType>
    <fullName>EV_TechSummitFisico</fullName>
    <active>true</active>
    <description>Eventos de tipo TechSummit Fisico.</description>
    <label>Evento Físico TechSummit</label>
</RecordType>