force-app/main/default/objects/Campaign/recordTypes/EV_TechSummitHibrido.recordType-meta.xml
<RecordType>
    <fullName>EV_TechSummitHibrido</fullName>
    <active>true</active>
    <description>Eventos de tipo TechSummit Hibrido.</description>
    <label>Evento Híbrido TechSummit</label>
</RecordType>