force-app/main/default/objects/Campaign/recordTypes/EV_TechSummitVirtual.recordType-meta.xml
<RecordType>
    <fullName>EV_TechSummitVirtual</fullName>
    <active>true</active>
    <description>Eventos de tipo TechSummit Virtual.</description>
    <label>Evento Virtual TechSummit</label>
</RecordType>