force-app/main/default/objects/Campaign/recordTypes/Fake_a_borrar.recordType-meta.xml
<RecordType>
    <fullName>Fake_a_borrar</fullName>
    <active>true</active>
    <label>Fake (a borrar)</label>
</RecordType>