force-app/main/default/objects/Campaign/validationRules/EV_CambioDireccion.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_CambioDireccion</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &apos;003&apos;) &amp;&amp;
		 (ISPICKVAL( EV_Notification__c 	, &apos;006&apos;) &amp;&amp; 
			 (!ISCHANGED(EV_LugarDeCelebracion__c)  &amp;&amp;
					!ISCHANGED(EV_City__c) &amp;&amp;
				 !ISCHANGED(EV_CP__c) &amp;&amp;
				 !ISCHANGED(EV_Street__c) &amp;&amp;
				 !ISCHANGED(EV_AddressNumber__c))) || 
ISPICKVAL(Status, &apos;003&apos;) &amp;&amp;
			(!ISPICKVAL( EV_Notification__c 	, &apos;006&apos;) &amp;&amp;
					(ISCHANGED(EV_LugarDeCelebracion__c)  ||
							ISCHANGED(EV_City__c) ||
				   ISCHANGED(EV_CP__c) ||
				   ISCHANGED(EV_Street__c) ||
				   ISCHANGED(EV_AddressNumber__c)))</errorConditionFormula>
    <errorMessage>Para cambiar la dirección, es necesario realizar un cambio en los campos correspondientes (Calle, Número, CP, Provincia, Ciudad o Lugar de Celebración).
Si has modificado alguno de estos campos debe seleccionarse la notificación del cambio de dirección.</errorMessage>
</ValidationRule>