force-app/main/default/objects/Campaign/validationRules/EV_CambioFecha.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_CambioFecha</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status, &apos;003&apos;)  &amp;&amp; 
 (ISPICKVAL( EV_Notification__c , &apos;003&apos;) &amp;&amp; 
   ( !ISCHANGED(StartDate)&amp;&amp; 
     !ISCHANGED(EV_HoraFin__c)&amp;&amp;
				 !ISCHANGED(EV_HoraInicio__c))) ||
ISPICKVAL(Status, &apos;003&apos;)  &amp;&amp; 
		(!ISPICKVAL( EV_Notification__c , &apos;003&apos;) &amp;&amp; 
   ( ISCHANGED(StartDate)||
     ISCHANGED(EV_HoraFin__c)||
				 ISCHANGED(EV_HoraInicio__c)))</errorConditionFormula>
    <errorMessage>Para cambiar el horario, es necesario realizar un cambio en los campos correspondientes (Hora Inicio, Hora Fin o Fecha de Inicio).
Si has modificado alguno de estos campos debe seleccionarse la notificación del cambio de fecha y/u hora.</errorMessage>
</ValidationRule>