force-app/main/default/objects/Campaign/validationRules/EV_CheckChatEventoVirtual.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_CheckChatEventoVirtual</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Status),
 ISPICKVAL(Status, &quot;009&quot;),
 OR(
  AND(EV_ChatEvento__c = true, EV_URLChatVirtual__c = null),
  AND(EV_ChatEvento__c = false, EV_URLChatVirtual__c != null)
 )
 
)</errorConditionFormula>
    <errorMessage>La URL del chat virtual tiene que estar informada.</errorMessage>
</ValidationRule>