force-app/main/default/objects/Campaign/validationRules/EV_controlStatusSurvey.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_controlStatusSurvey</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status),
OR($Profile.Name = &quot;EV_Eventos&quot;,
 $Profile.Name = &quot;EV_EventosAccionistas&quot;),
ISPICKVAL(Status, &quot;009&quot;),
ISBLANK(EV_Encuesta__c)
)</errorConditionFormula>
    <errorMessage>No es posible el cambio de estado sin una encuesta asociada.</errorMessage>
</ValidationRule>