force-app/main/default/objects/Campaign/validationRules/EV_EstadoConfirmado.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_EstadoConfirmado</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(EV_FlujoPruebas__c, &apos;001&apos;)&amp;&amp; !ISPICKVAL(Status, &apos;009&apos;)</errorConditionFormula>
    <errorDisplayField>EV_FlujoPruebas__c</errorDisplayField>
    <errorMessage>Solo se puede seleccionar solicitud de pruebas cuando el estado es Confirmado</errorMessage>
</ValidationRule>