force-app/main/default/objects/Campaign/validationRules/EV_NotChangeOwner.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_NotChangeOwner</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Permission.EV_NotChangeANYOwnerCampaign, PRIORVALUE(OwnerId)!=OwnerId)</errorConditionFormula>
    <errorMessage>Error. No puede cambiar el propietario de una campaña.</errorMessage>
</ValidationRule>