force-app/main/default/objects/Campaign/validationRules/EV_NotCreateEditAccionistasPromMC.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_NotCreateEditAccionistasPromMC</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(AND(ISNEW(), RecordType.DeveloperName = &apos;EV_Eventos_Accionistas&apos;),
AND(PRIORVALUE(LastModifiedDate) != NOW(),RecordType.DeveloperName = &apos;EV_Eventos_Accionistas&apos;)),
$Permission.EV_NotAccionistasPromMC,
AND(!$Permission.CBK_BypassValidationRules,
!$Permission.EV_ByPassValidationRules))</errorConditionFormula>
    <errorMessage>No tiene permiso para crear o editar campañas de Accionistas.</errorMessage>
</ValidationRule>