force-app/main/default/objects/Campaign/validationRules/EV_NotVirtualEvent.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_NotVirtualEvent</fullName>
    <active>true</active>
    <description>Validation if campaign change status confirmed and have not URL Virtual Event</description>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL(PRIORVALUE(Status), &quot;009&quot;),
OR(ISPICKVAL(Status, &quot;008&quot;),
ISPICKVAL(Status, &quot;003&quot;),
ISPICKVAL(Status, &quot;004&quot;),
ISPICKVAL(Status, &quot;005&quot;),
ISPICKVAL(Status, &quot;006&quot;),
ISPICKVAL(Status, &quot;007&quot;)),
EV_URLDelEventoVirtual__c = null,
OR(
RecordType.DeveloperName = &apos;EV_EventoVirtual&apos;,
RecordType.DeveloperName = &apos;EV_TechSummitVirtual&apos;
),
$Profile.Name = &quot;EV_Eventos&quot;
)</errorConditionFormula>
    <errorMessage>Necesitas tener infomada la URL del Evento virtual para poder cambiar de estado.</errorMessage>
</ValidationRule>