force-app/main/default/objects/Campaign/validationRules/EV_OnlyModifiedWithRoleEvent.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_OnlyModifiedWithRoleEvent</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL( PRIORVALUE(Status) , &quot;009&quot;)),ISPICKVAL(Status, &quot;009&quot;),
NOT( OR($UserRole.DeveloperName=&apos;EV_Eventos&apos;,$UserRole.DeveloperName=&apos;Eventos_Accionista&apos;,  $Profile.Name = &apos;System Administrator&apos;))
)</errorConditionFormula>
    <errorMessage>No es posible el cambio de estado para este perfil.</errorMessage>
</ValidationRule>