force-app/main/default/objects/Campaign/validationRules/EV_VolverVerEvento.validationRule-meta.xml
<ValidationRule>
    <fullName>EV_VolverVerEvento</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( EV_Notification__c , &apos;005&apos;), NOT( ISPICKVAL( Status , &apos;005&apos;) ) )</errorConditionFormula>
    <errorMessage>Finaliza el evento para volver a ver.</errorMessage>
</ValidationRule>