force-app/main/default/objects/Campaign/validationRules/Not_delete_CM_Gestor_Eventos_Senior.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_delete_CM_Gestor_Eventos_Senior</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR($Permission.EV_Gestor_Eventos_Senior, $Permission.EV_NoDeleteCM),
				PRIORVALUE(EV_Total_Miembros__c )&gt; EV_Total_Miembros__c)</errorConditionFormula>
    <errorMessage>Error, no esta autorizado a eliminar miembros de campaña</errorMessage>
</ValidationRule>